--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3"
-  }
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeds/index.js" 
+
+}
 }
